# StockLight

./: .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  StockLight.md  codes.txt  pyproject.toml  requirements.txt  stock_api_specs.json  启动程序.bat
.github/workflows/: python-app.yml
scripts/: fetch_data.py  kline_update.py  preprocess.py
scripts/stocklight/: config.py  utils.py
server/: start_server.py  初始化数据.bat  启动服务.bat  更新数据.bat  更新日K.bat  获取实时行情.bat  获取股票名称.bat  预处理数据.bat
tests/: conftest.py  test_config.py  test_preprocess.py  test_utils.py
web/: detail.html  index.html
web/css/: style.css
web/js/: app.js  chart.js  detail.js  indicators.js  table.js
