[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "stocklight"
version = "1.0.0"
description = "轻量级 A 股行情分析工具"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/bailacking/StockLight"

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["stocklight*"]

[tool.ruff]
target-version = "py310"
line-length = 120
lint.select = ["F", "E", "W", "I"]
lint.ignore = [
    "E501",  # line too long (handled by line-length)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]  # allow unused imports in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
